--- a/numstackpro/numstackpro.yml
+++ b/numstackpro/numstackpro.yml
@@ -1,10 +1,11 @@
 name: base
 channels:
+  - intel
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - asn1crypto=0.24.0=py37_0
-  - blas=1.0=openblas
+  - blas=1.0=mkl
   - bzip2=1.0.8=h7b6447c_0
   - ca-certificates=2019.5.15=0
   - certifi=2019.6.16=py37_1
@@ -14,26 +15,28 @@ dependencies:
   - conda-env=2.6.0=1
   - conda-package-handling=1.3.11=py37_0
   - cryptography=2.7=py37h1ba5d50_0
+  - cython=0.29.6=py37he6710b0_0
   - idna=2.8=py37_0
-  - joblib=0.13.2=py37_0
+  - intel-openmp=2019.4=intel_243
   - libarchive=3.3.3=h5d8350f_5
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
-  - libopenblas=0.3.6=h5a2b251_1
   - libstdcxx-ng=8.2.0=hdf63c60_1
   - libxml2=2.9.9=hea5a465_1
   - llvmlite=0.29.0=py37hd408876_0
   - lz4-c=1.8.1.2=h14c3975_0
   - lzo=2.10=h49e0be7_2
+  - mkl=2019.4=intel_243
+  - mkl_fft=1.0.12=py37ha843d7b_0
+  - mkl_random=1.0.2=py37hd81dba3_0
   - ncurses=6.1=he6710b0_1
-  - numba=0.45.0=py37h962f231_0
-  - numpy=1.16.4=py37h99e49ec_0
-  - numpy-base=1.16.4=py37h2f8d375_0
+  - numba=0.44.1=py37h962f231_0
+  - numpy=1.16.3=py37h7e9f1db_0
+  - numpy-base=1.16.3=py37hde5b4d6_0
   - openssl=1.1.1c=h7b6447c_1
-  - pandas=0.25.0=py37he6710b0_0
-  - pip=19.1.1=py37_0
+  - pandas=0.24.2=py37he6710b0_0
   - pycosat=0.6.3=py37h14c3975_0
   - pycparser=2.19=py37_0
   - pyopenssl=19.0.0=py37_0
@@ -45,11 +48,12 @@ dependencies:
   - readline=7.0=h7b6447c_5
   - requests=2.22.0=py37_0
   - ruamel_yaml=0.15.46=py37h14c3975_0
-  - scikit-learn=0.21.2=py37h22eb022_0
-  - scipy=1.3.0=py37he2b7bc3_0
+  - scikit-learn=0.20.3=py37hd81dba3_0
+  - scipy=1.2.1=py37h7c811a0_0
   - setuptools=41.0.1=py37_0
   - six=1.12.0=py37_0
   - sqlite=3.29.0=h7b6447c_0
+  - tbb=2019.6=intel_243
   - tk=8.6.8=hbc83047_0
   - tqdm=4.32.1=py_0
   - urllib3=1.24.2=py37_0
@@ -60,12 +64,11 @@ dependencies:
   - zstd=1.3.7=h0b5b093_0
   - pip:
     - click==7.0
-    - coloredlogs==10.0
     - fastapi==0.33.0
     - gunicorn==19.9.0
     - h11==0.8.1
     - httptools==0.0.13
-    - humanfriendly==4.18
+    - pip==19.2.1
     - pydantic==0.31
     - starlette==0.12.0
     - uvicorn==0.8.4
