--- a/numstackpro/numstackpro-dev.yml
+++ b/numstackpro/numstackpro-dev.yml
@@ -1,29 +1,35 @@
 name: base
 channels:
-  - conda-forge
   - intel
+  - conda-forge
   - anaconda
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
+  - alabaster=0.7.12=py37_0
   - asn1crypto=0.24.0=py37_0
+  - atomicwrites=1.3.0=py37_1
   - attrs=19.1.0=py37_1
+  - babel=2.7.0=py_0
   - backcall=0.1.0=py37_0
   - blas=1.0=mkl
   - bleach=3.1.0=py37_0
+  - bottleneck=1.2.1=py37h035aef0_1
   - bzip2=1.0.8=h7b6447c_0
   - ca-certificates=2019.5.15=0
-  - certifi=2019.6.16=py37_0
+  - certifi=2019.6.16=py37_1
   - cffi=1.12.3=py37h2e261b9_0
   - chardet=3.0.4=py37_1003
   - conda=4.7.10=py37_0
   - conda-env=2.6.0=1
   - conda-package-handling=1.3.11=py37_0
+  - coverage=4.5.3=py37h7b6447c_0
   - cryptography=2.7=py37h1ba5d50_0
   - cython=0.29.6=py37he6710b0_0
   - dbus=1.13.6=h746ee38_0
   - decorator=4.4.0=py37_1
   - defusedxml=0.6.0=py_0
+  - docutils=0.14=py37_0
   - entrypoints=0.3=py37_0
   - expat=2.2.6=he6710b0_0
   - fontconfig=2.13.0=h9420a91_0
@@ -32,8 +38,11 @@ dependencies:
   - gmp=6.1.2=h6c8ec71_1
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb453b48_1
+  - hypothesis=4.32.2=py37_0
   - icu=58.2=h9c2bf20_1
   - idna=2.8=py37_0
+  - imagesize=1.1.0=py37_0
+  - importlib_metadata=0.17=py37_1
   - intel-openmp=2019.4=intel_243
   - ipykernel=5.1.1=py37h39e3cac_0
   - ipython=7.7.0=py37h39e3cac_0
@@ -69,6 +78,7 @@ dependencies:
   - mkl=2019.4=intel_243
   - mkl_fft=1.0.12=py37ha843d7b_0
   - mkl_random=1.0.2=py37hd81dba3_0
+  - more-itertools=7.0.0=py37_0
   - nbconvert=5.5.0=py_0
   - nbformat=4.4.0=py37_0
   - ncurses=6.1=he6710b0_1
@@ -76,7 +86,8 @@ dependencies:
   - numba=0.44.1=py37h962f231_0
   - numpy=1.16.3=py37h7e9f1db_0
   - numpy-base=1.16.3=py37hde5b4d6_0
-  - openssl=1.1.1=h7b6447c_0
+  - openssl=1.1.1c=h7b6447c_1
+  - packaging=19.0=py37_0
   - pandas=0.24.2=py37he6710b0_0
   - pandoc=2.2.3.2=0
   - pandocfilters=1.4.2=py37_1
@@ -84,16 +95,21 @@ dependencies:
   - pcre=8.43=he6710b0_0
   - pexpect=4.7.0=py37_0
   - pickleshare=0.7.5=py37_0
+  - pluggy=0.12.0=py_0
   - prometheus_client=0.7.1=py_0
   - prompt_toolkit=2.0.9=py37_0
   - ptyprocess=0.6.0=py37_0
+  - py=1.8.0=py37_0
   - pycosat=0.6.3=py37h14c3975_0
   - pycparser=2.19=py37_0
   - pygments=2.4.2=py_0
   - pyopenssl=19.0.0=py37_0
+  - pyparsing=2.4.0=py_0
   - pyqt=5.9.2=py37h05f1152_2
   - pyrsistent=0.14.11=py37h7b6447c_0
   - pysocks=1.7.0=py37_0
+  - pytest=5.0.1=py37_0
+  - pytest-cov=2.7.1=py_0
   - python=3.7.3=h0371630_0
   - python-dateutil=2.8.0=py37_0
   - python-libarchive-c=2.8=py37_11
@@ -110,6 +126,15 @@ dependencies:
   - setuptools=41.0.1=py37_0
   - sip=4.19.8=py37hf484d3e_0
   - six=1.12.0=py37_0
+  - snakeviz=1.0.0=py37_0
+  - snowballstemmer=1.9.0=py_0
+  - sphinx=2.1.2=py_0
+  - sphinxcontrib-applehelp=1.0.1=py_0
+  - sphinxcontrib-devhelp=1.0.1=py_0
+  - sphinxcontrib-htmlhelp=1.0.2=py_0
+  - sphinxcontrib-jsmath=1.0.1=py_0
+  - sphinxcontrib-qthelp=1.0.2=py_0
+  - sphinxcontrib-serializinghtml=1.1.3=py_0
   - sqlite=3.29.0=h7b6447c_0
   - tbb=2019.6=intel_243
   - terminado=0.8.2=py37_0
@@ -126,6 +151,7 @@ dependencies:
   - xz=5.2.4=h14c3975_4
   - yaml=0.1.7=had09818_2
   - zeromq=4.3.1=he6710b0_3
+  - zipp=0.5.1=py_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
   - pip:
